--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{site.name}} | {{ page.title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{site.name}} | {{ page.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
-	<script src="/assets/js/jquery-1.10.1.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/jquery-1.10.1.min.js"></script>
 
-	<!-- Bootstrap -->
-	<link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link href="/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-	<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
+    <link href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <script src="{{ site.baseurl }}/assets/bootstrap/js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
 
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
+<div class="container">
+    <div class="site">
+        <div class="header">
+            <h1 class="title"><a href="{{ site.baseurl }}">{{ site.name }}</a></h1>
+            <a class="extra" href="{{ site.baseurl }}">home</a>
+        </div>
 
-                {{ content }}
+        {{ content }}
 
-            <div class="footer">
-              <div class="contact">
+        <div class="footer">
+            <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                    Your Name<br/>
+                    What You Are<br/>
+                    your@email.com
                 </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
             </div>
-          </div>
-        </div> <!-- /container -->
+            <div class="contact">
+                <p>
+                    <a href="http://github.com/yourusername/">github.com/yourusername</a><br/>
+                    <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br/>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /container -->
 
-    </body>
+</body>
 </html>
