--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{site.name}} | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png" />
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
