--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,12 +16,10 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
 
-
-
-
 </head>
 <body>
 
+{{ content }}
 
 </body>
 </html>
