--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
                 <ul class="nav">
                     {% for item in site.navigation %}
                         <li {% if page.navbar-active == item %}class="active"{% endif %}>
-                            <a href="{{ site.baseurl }}/{{ item | handleize }}.html">{{ item | capitalize }}</a>
+                            <a href="{{ site.baseurl }}/{{ item | handleize }}.html">{{ item }}</a>
                         </li>
                     {% endfor %}
                     <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
