Added jekyll-assets to manage assets
Got rid of inline JS/CSS as well.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,8 @@
 ---
 layout: base
 ---
-<style>
-    body {
-        padding-top: 60px;
-    }
-</style>
+{% stylesheet page %}
+
 {% assign fixed = 'true' %}
 {% include navbar.html %}
 <div class="container">
