--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,14 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{site.name}} | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
+    <link rel="icon" type="image/png" href="{% asset_path favicon.png %}"/>
 
-    <script src="{{ site.baseurl }}/assets/js/jquery-1.10.1.min.js"></script>
-
-    <!-- Bootstrap -->
-    <link href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <script src="{{ site.baseurl }}/assets/bootstrap/js/bootstrap.min.js"></script>
+    {% stylesheet app %}
+    {% javascript app %}
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
 
