--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,7 +15,18 @@
 </head>
 <body>
 
-{{ content }}
+<div class="wrapper">
+    {{ content }}
+    <div class="push"><!-- necessary for sticky footer --></div>
+</div>
 
+<footer class="footer footer-docs hidden-print">
+    <div class="container">
+        <a href="http://alum.mit.edu/contact">MIT Alumni Association</a> ·
+        <a href="http://alum.mit.edu/privacy">Security & Privacy Policy</a>
+
+        <div class="pull-right muted">© 2013 MIT Club of Boston.</div>
+    </div>
+</footer>
 </body>
 </html>
