Finished Groups Page

--- a/_assets/stylesheets/app.css.less
+++ b/_assets/stylesheets/app.css.less
@@ -19,3 +19,29 @@
 }
 
 .sticky-footer(20px, 20px, 20px, 50px);
+
+.affix {
+  top: 50px;
+}
+
+.groups {
+  margin-top: 10px;
+
+  .group{
+    margin-bottom: 20px;
+
+    .name {
+      margin-bottom: 0;
+    }
+
+    .leader{
+      .heading{
+        .muted;
+      }
+    }
+
+    .info {
+      margin-top: 10px;
+    }
+  }
+}
