Added Scholarship Page

--- a/_assets/stylesheets/app.css.less
+++ b/_assets/stylesheets/app.css.less
@@ -51,3 +51,14 @@
     margin-bottom: 0;
   }
 }
+
+.scholarship {
+  .mandate {
+    font-style: italic;
+    margin-left: 20px;
+  }
+
+  .recipients {
+    margin-top: 20px;
+  }
+}
