--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,12 @@
 <div class="navbar navbar-inverse {% if fixed %}navbar-fixed-top{% endif %}">
     <div class="navbar-inner">
         <div class="container">
-            <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="brand" href="{{ site.baseurl }}/">MIT Club of Boston</a>
-            <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     {% for item in site.navigation %}
@@ -16,24 +14,19 @@
                             <a href="{{ site.baseurl }}/{{ item.url }}">{{ item.text }}</a>
                         </li>
                     {% endfor %}
-                    <!-- Read about Bootstrap dropdowns at http://twitter.github.com/stylesheets/javascript.html#dropdowns -->
+                </ul>
+                <ul class="nav pull-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tim Beaver '61 <b
                                 class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li class="nav-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
+                            <li><a href="#">My Profile</a></li>
+                            <li><a href="#">Alumni Directory</a></li>
+                            <li><a href="#">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
-            <!--/.nav-collapse -->
         </div>
     </div>
-    <!-- /.navbar-inner -->
 </div>
