Added News Index Page

--- a/_assets/stylesheets/app.css.less
+++ b/_assets/stylesheets/app.css.less
@@ -79,3 +79,28 @@
     margin-top: 35px;
   }
 }
+
+.articles {
+  .article {
+    padding-bottom: 10px;
+    border-bottom: 5px solid @red;
+    margin-bottom: 10px;
+    .title {
+      margin-bottom: 0;
+    }
+
+    .date {
+      .muted;
+      margin-bottom: 10px;
+    }
+
+    .excerpt {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .more {
+      font-weight: bold;
+    }
+  }
+}
