Added a News Post

--- a/_assets/stylesheets/app.css.less
+++ b/_assets/stylesheets/app.css.less
@@ -104,3 +104,15 @@
     }
   }
 }
+
+article.post {
+  .image {
+    .caption {
+      font-style: italic;
+      padding-left: 7px;
+    }
+  }
+  .content {
+    margin-top: 10px;
+  }
+}
